2010-01-27  Dave Korn  <dave.korn.cygwin@gmail.com>

	Backport from trunk:
	* gas/pe/section-align-1.s: New test source file.
	* gas/pe/section-align-1.d: Likewise control script.
	* gas/pe/section-align-2.s: Likewise ...
	* gas/pe/section-align-2.d: ... and likewise.
	* gas/pe/pe.exp: Invoke new testcases.

2009-12-15  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from trunk:
	2009-12-07  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/11037
	* gas/i386/intelpic.s: Add testcases.
	* gas/i386/intelpic.d: Updated.

	2009-10-28  Alan Modra  <amodra@bigpond.net.au>

	* gas/i386/intelpic.d: Correct.

	2009-10-08  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/10704
	* gas/i386/intelpic.s: Add 2 new tests.
	* gas/i386/intelpic.d: Updated.

2009-10-02  Peter Bergner  <bergner@vnet.ibm.com>

	* gas/ppc/476.s: New test.
	* gas/ppc/476.d: Likewise.
	* gas/ppc/ppc.exp: Run the 476 test.

2009-10-01  Peter Bergner  <bergner@vnet.ibm.com>

	* gas/ppc/a2.d: Rename "ppca2" to "a2".

2009-09-29  Peter Bergner  <bergner@vnet.ibm.com>

	* gas/ppc/vsx.s ("lxsdux", "lxvd2ux", "lxvw4ux", "stxsdux", 
	"stxvd2ux", "stxvw4ux"): Remove tests.
	* gas/ppc/vsx.d: Likewise.
	* gas/ppc/power7.s: Likewise.
	* gas/ppc/power7.d: Likewise.

2009-09-22  Alan Modra  <amodra@bigpond.net.au>

	* gas/ppc/a2.d: Match PPC64 relocs.

2009-09-21  Richard Sandiford  <rdsandiford@googlemail.com>

	* gas/mips/jalr2.s, gas/mips/jalr2.d: New test.
	* gas/mips/jal-svr4pic.d: Don't expect R_MIPS_JALRs to be reduced.
	* gas/mips/jal-xgot.d: Likewise.
	* gas/mips/mips-abi32-pic2.d: Likewise.
	* gas/mips/mips.exp: Run it.

2009-09-21  Maciej W. Rozycki  <macro@linux-mips.org>

	* lib/gas-defs.exp (gas_test_error): Mark internal error/assertion
	failures seen in output as fails.  Also record output being
	matched for fails.

2009-09-21  Ben Elliston  <bje@au.ibm.com>
	    Peter Bergner  <bergner@vnet.ibm.com>

	* gas/ppc/a2.s: New.
	* gas/ppc/a2.d: Likewise.
	* gas/ppc/ppc.exp: Run the a2 dump test.
